--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "overtrue/pinyin",
+    "name": "gerpayt/pinyin",
     "description": "Chinese to pinyin translator.",
     "keywords": [
         "chinese",
